[package]
name = "tikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = "0.1.0"
tokio = { version = "1.5", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
